# MultimodalAnalysis

./: .gitignore  pyproject.toml
configs/: preprocessing.yaml
models/eegnet_2s_01_25_clean_p2p300/eegnet/closed/majority_vote/: fold_01_best.pt  fold_01_history.csv  fold_01_last.pt  fold_01_test_metrics.json  fold_02_best.pt  fold_02_history.csv  fold_02_last.pt  fold_02_test_metrics.json  fold_03_best.pt  fold_03_history.csv  fold_03_last.pt  fold_03_test_metrics.json  fold_04_best.pt  fold_04_history.csv  fold_04_last.pt  fold_05_best.pt  (+8 more)
notebooks/: multimodal-analysis.ipynb
outputs/debug_eeg/: eeg_quality_channels_closed.csv  eeg_quality_channels_complete.csv  eeg_quality_channels_open.csv  eeg_quality_subjects_closed.csv  eeg_quality_subjects_complete.csv  eeg_quality_subjects_open.csv
outputs/eeg_ct/baseline_official_eegnet_44meanbac_closed/: summary.csv  summary_by_fold.csv  summary_by_init_seed.csv  summary_by_split_seed.csv  summary_overall.csv
outputs/eeg_ct/eegnet_baseline_closed/: summary.csv  summary_by_fold.csv  summary_by_init_seed.csv  summary_by_split_seed.csv  summary_overall.csv
src/config/: __init__.py  settings.py
src/data/: buid_dataset.py  build_eeg.py  build_eeg_ct.py
src/embedding/: __init__.py  eegformer.py
src/models/: 2_eegnet_baseline.py  eegnet.py
src/preprocessing/: __init__.py  eeg.py
src/training/: __init__.py  eegformer.py  script_train_final.py  train.py  train_eeg.py  train_eeg_ct.py  train_eeg_meanmaxpool.py  train_eeg_trainable_pool.py
src/utils/: __init__.py  visualization.py
tests/: test_eegnet_pipeline.py
(+142 files in other folders)
